package(default_visibility = ["//visibility:public"])
licenses(['notice'])

load("//third_party/ts/material2/tools:defaults.bzl", "ts_library")

exports_files([
  "bazel-tsconfig-build.json",
  "bazel-tsconfig-test.json",
])

ts_library(
  name = 'module-typings',
  srcs = [":module-typings.d.ts"]
)
