package(default_visibility=["//visibility:public"])
load("//third_party/ts/material2/tools:defaults.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")


ts_library(
  name = "sass_bundle_lib",
  srcs = ["sass_bundle.ts"],
  deps = [
    "@matdeps//@types/node",
    "@matdeps//scss-bundle",
  ],
  tsconfig = "bazel-tools-tsconfig.json",
)

# Executable for the custom sass_bundle rule (see sass_bundle.bzl).
nodejs_binary(
  name = "sass_bundle",
  data = [
   "@matdeps//scss-bundle",
    ":sass_bundle_lib",
  ],
  entry_point = "angular_material/tools/sass_bundle.js",
)
