package(default_visibility=["//visibility:public"])

load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "scrolling",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk-experimental/scrolling",
  deps = [
    "@angular//packages/core",
    "@rxjs",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/collections",
    "//third_party/ts/material2/src/cdk/scrolling",
  ],
)

ng_test_library(
  name = "scrolling_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "//third_party/ts/material2/src/cdk/scrolling",
    ":scrolling",
  ],
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":scrolling_test_sources"]
)
