licenses(["notice"])
package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_library")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")


ng_module(
  name = "a11y",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/a11y",
  deps = [
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/observers",
    "//third_party/ts/material2/src/cdk/platform",
    "@rxjs",
  ],
  tsconfig = "//third_party/ts/material2/src/cdk:tsconfig-build.json",
)

# TODO(jelbourn): remove this when sass_library acts like a filegroup
filegroup(
  name = "a11y_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_library(
  name = "a11y_scss_lib",
  srcs = [":a11y_scss_partials"],
)

ts_library(
  name = "a11y_test_sources",
  testonly = 1,
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    ":a11y",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/observers",
    "//third_party/ts/material2/src/cdk/platform",
    "//third_party/ts/material2/src/cdk/testing",
    "@rxjs",
    "@rxjs//operators",
  ],
  tsconfig = "//third_party/ts/material2/src/cdk:tsconfig-build.json",
)

ts_web_test(
  name = "unit_tests",
  # TODO(mmalerba): re-enable once ngfactory issue is resolved.
  tags = ["manual"],
  bootstrap = [
    "//:web_test_bootstrap_scripts",
  ],
  # Do not sort
  deps = [
    "//:tslib_bundle",
    "//:angular_bundles",
    "//:angular_test_bundles",
    "//test:angular_test_init",
    ":a11y_test_sources",
  ],
)
