package(default_visibility=["//visibility:public"])

load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ts_library", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "accordion",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/accordion",
  deps = [
    "@angular//packages/core",
    "@rxjs",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/collections",
  ]
)

ng_test_library(
  name = "accordion_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    "@angular//packages/platform-browser/animations",
    ":accordion",
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":accordion_test_sources"],
)
