package(default_visibility=["//visibility:public"])
licenses(["notice"])

load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "drag-drop",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/drag-drop",
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/platform",
    "//third_party/ts/material2/src/cdk/scrolling",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/coercion",
  ],
)

ng_test_library(
  name = "drag-drop_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "//third_party/ts/material2/src/cdk/testing",
    "//third_party/ts/material2/src/cdk/bidi",
    ":drag-drop",
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":drag-drop_test_sources"],
)
