package(default_visibility=["//visibility:public"])
licenses(["notice"])

load("//third_party/ts/material2/tools:defaults.bzl", "ts_library")

ts_library(
  name = "keycodes",
  module_name = "@angular/cdk/keycodes",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  deps = ["@matdeps//tslib"],
)
