package(default_visibility=["//visibility:public"])

load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "layout",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/layout",
  deps = [
    "@angular//packages/core",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/platform",
  ],
)

ng_test_library(
  name = "layout_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "//third_party/ts/material2/src/cdk/platform",
    ":layout",
  ],
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":layout_test_sources"],
)
