package(default_visibility=["//visibility:public"])

load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "observers",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/observers",
  deps = [
    "@angular//packages/core",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/coercion",
  ],
)

ng_test_library(
  name = "observers_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [":observers"],
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":observers_test_sources"],
)
