licenses(["notice"])
package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")


ng_module(
  name = "observers",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/observers",
  deps = [
    "//third_party/ts/material2/src/cdk/coercion",
    "@angular//packages/core",
    "@rxjs",
  ],
  tsconfig = "//third_party/ts/material2/src/cdk:tsconfig-build.json",
)

ts_library(
  name = "observers_test_sources",
  testonly = 1,
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    ":observers",
    "@rxjs",
  ],
  tsconfig = "//third_party/ts/material2/src/cdk:tsconfig-build.json",
)

ts_web_test(
  name = "unit_tests",
  bootstrap = ["//:web_test_bootstrap_scripts"],
  # Do not sort
  deps = [
    "//:tslib_bundle",
    "//:angular_bundles",
    "//:angular_test_bundles",
    "//test:angular_test_init",
    ":observers_test_sources",
  ],
)
