package(default_visibility=["//visibility:public"])
licenses(["notice"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "overlay",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/overlay",
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/platform",
    "//third_party/ts/material2/src/cdk/portal",
    "//third_party/ts/material2/src/cdk/scrolling",
  ],
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "overlay_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_library(
  name = "overlay_scss_lib",
  srcs = [":overlay_scss_partials"],
)

sass_binary(
  name = "overlay_prebuilt_scss",
  src = "overlay-prebuilt.scss",
  deps = [":overlay_scss_lib"]
)

ng_test_library(
  name = "overlay_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/common",
    "@angular//packages/common/testing",
    "@angular//packages/platform-browser",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/platform",
    "//third_party/ts/material2/src/cdk/portal",
    "//third_party/ts/material2/src/cdk/scrolling",
    "//third_party/ts/material2/src/cdk/testing",
    ":overlay",
  ],
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":overlay_test_sources"],
  static_css = ["overlay_prebuilt_scss"],
)
