licenses(["notice"])
package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")

ng_module(
  name = "platform",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/platform",
  deps = [
    "@angular//packages/common",
    "@rxjs",
  ],
  tsconfig = "//third_party/ts/material2/src/cdk:tsconfig-build.json",
)
