package(default_visibility=["//visibility:public"])
licenses(['notice'])

load("//third_party/ts/material2/tools:defaults.bzl", "ng_module")

ng_module(
  name = "platform",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/platform",
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
  ]
)
