package(default_visibility=["//visibility:public"])
licenses(["notice"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "scrolling",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/scrolling",
  assets = [":virtual-scroll-viewport.css"] + glob(["**/*.html"]),
  deps = [
    "@angular//packages/core",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/collections",
    "//third_party/ts/material2/src/cdk/platform",
  ],
)

sass_binary(
  name = "virtual_scroll_viewport_scss",
  src = "virtual-scroll-viewport.scss",
)

ng_test_library(
  name = "scrolling_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@rxjs",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/collections",
    "//third_party/ts/material2/src/cdk/testing",
    ":scrolling",
  ],
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":scrolling_test_sources"],
)
