licenses(["notice"])
package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")

ng_module(
  name = "stepper",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/stepper",
  deps = [
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/keycodes",
    "@angular//packages/common",
    "@angular//packages/forms",
    "@rxjs",
  ],
  tsconfig = "//third_party/ts/material2/src/cdk:tsconfig-build.json",
)
