package(default_visibility=["//visibility:public"])

load("//third_party/ts/material2/tools:defaults.bzl", "ng_module")

ng_module(
  name = "stepper",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/stepper",
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "@angular//packages/forms",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/keycodes",
  ],
)
