package(default_visibility=["//visibility:public"])
licenses(["notice"])

load("//third_party/ts/material2/tools:defaults.bzl", "ng_module")

ng_module(
  name = "testing",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/testing",
  deps = [
    "@angular//packages/core",
  ],
)
