package(default_visibility=["//visibility:public"])
licenses(["notice"])

load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "tree",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/tree",
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/collections",
  ],
)

ng_test_library(
  name = "tree_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/collections",
    ":tree",
  ],
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":tree_test_sources"],
)
