package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_library", "sass_binary")


ng_module(
  name = "autocomplete",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/autocomplete",
  assets = [":autocomplete.css"] + glob(["**/*.html"]),
  deps = [
    "//third_party/ts/material2/src/lib/core",
    "//third_party/ts/material2/src/lib/form-field",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/collections",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/portal",
    "//third_party/ts/material2/src/cdk/overlay",
    "//third_party/ts/material2/src/cdk/coercion",
  ],
  tsconfig = "//third_party/ts/material2/src/lib:tsconfig-build.json",
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "autocomplete_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_binary(
  name = "autocomplete_scss",
  src = "autocomplete.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)
