package(default_visibility=["//visibility:public"])
licenses(["notice"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "autocomplete",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/autocomplete",
  assets = [":autocomplete.css"] + glob(["**/*.html"]),
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "@angular//packages/forms",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/overlay",
    "//third_party/ts/material2/src/cdk/portal",
    "//third_party/ts/material2/src/cdk/scrolling",
    "//third_party/ts/material2/src/lib/core",
    "//third_party/ts/material2/src/lib/form-field",
  ]
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "autocomplete_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_binary(
  name = "autocomplete_scss",
  src = "autocomplete.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)

ng_test_library(
  name = "autocomplete_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/forms",
    "@angular//packages/platform-browser",
    "@angular//packages/platform-browser/animations",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/overlay",
    "//third_party/ts/material2/src/cdk/scrolling",
    "//third_party/ts/material2/src/cdk/testing",
    "//third_party/ts/material2/src/lib/core",
    "//third_party/ts/material2/src/lib/form-field",
    "//third_party/ts/material2/src/lib/input",
    ":autocomplete"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":autocomplete_test_sources"],
)
