package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "badge",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/badge",
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/lib/core",
  ] + glob(["**/*.html"]),
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "badge_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)

ng_test_library(
  name = "badge_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    "//third_party/ts/material2/src/lib/core",
    ":badge",
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":badge_test_sources"],
)

