package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "button-toggle",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/button-toggle",
  assets = [":button-toggle.css"] + glob(["**/*.html"]),
  deps = [
    "@angular//packages/core",
    "@angular//packages/forms",
    "//third_party/ts/material2/src/cdk/collections",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/lib/core",
  ],
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "button_toggle_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_binary(
  name = "button_toggle_scss",
  src = "button-toggle.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)

ng_test_library(
  name = "button_toggle_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/forms",
    "@angular//packages/platform-browser",
    "//third_party/ts/material2/src/cdk/testing",
    ":button-toggle",
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":button_toggle_test_sources"],
)

