package(default_visibility=["//visibility:public"])
licenses(['notice'])

#load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "button",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/button",
  assets = [":button.css"] + glob(["**/*.html"]),
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "@angular//packages/platform-browser/animations",
    "//third_party/ts/material2/src/cdk/platform",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/lib/core",
  ],
)

# TODO(jelbourn): remove this when sass_library acts like a filegroup
filegroup(
  name = "button_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

# Library of all button scss partials.
sass_library(
  name = "button_scss_lib",
  srcs = [":button_scss_partials"],
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_binary(
  name = "button_scss",
  src = "button.scss",
  deps = [":button_scss_lib"],
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)

ng_test_library(
  name = "button_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    "//third_party/ts/material2/src/lib/core",
    ":button"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":button_test_sources"],
)
