package(default_visibility=["//visibility:public"])
licenses(["notice"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "checkbox",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/checkbox",
  assets = [":checkbox.css"] + glob(["**/*.html"]),
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "@angular//packages/forms",
    "@angular//packages/platform-browser/animations",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/observers",
    "//third_party/ts/material2/src/lib/core",
  ],
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "checkbox_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_binary(
  name = "checkbox_scss",
  src = "checkbox.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)

ng_test_library(
  name = "checkbox_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/forms",
    "@angular//packages/platform-browser",
    "//third_party/ts/material2/src/cdk/observers",
    "//third_party/ts/material2/src/cdk/testing",
    ":checkbox",
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":checkbox_test_sources"],
)
