package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_library", "sass_binary")


ng_module(
  name = "datepicker",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/datepicker",
  assets = [
    ":datepicker-content.css",
    ":datepicker-toggle.css",
    ":calendar-body.css",
    ":calendar.css",
  ] + glob(["**/*.html"]),
  deps = [
    "//third_party/ts/material2/src/lib/core",
    "//third_party/ts/material2/src/lib/button",
    "//third_party/ts/material2/src/lib/dialog",
    "//third_party/ts/material2/src/lib/input",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/coercion",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/portal",
    "//third_party/ts/material2/src/cdk/overlay",
  ],
  tsconfig = "//third_party/ts/material2/src/lib:tsconfig-build.json",
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "datepicker_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_binary(
  name = "datepicker_content_scss",
  src = "datepicker-content.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_binary(
  name = "datepicker_toggle_scss",
  src = "datepicker-toggle.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_binary(
  name = "calendar_scss",
  src = "calendar.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_binary(
  name = "calendar_body_scss",
  src = "calendar-body.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)



sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)
