package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_library", "sass_binary")


ng_module(
  name = "dialog",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/dialog",
  assets = [":dialog.css"] + glob(["**/*.html"]),
  deps = [
    "//third_party/ts/material2/src/lib/core",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/overlay",
    "//third_party/ts/material2/src/cdk/portal",
  ],
  tsconfig = "//third_party/ts/material2/src/lib:tsconfig-build.json",
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "dialog_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_binary(
  name = "dialog_scss",
  src = "dialog.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)
