package(default_visibility=["//visibility:public"])
licenses(["notice"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//third_party/ts/material2/tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "dialog",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material/dialog",
  assets = [":dialog.css"] + glob(["**/*.html"]),
  deps = [
    "@angular//packages/animations",
    "@angular//packages/common",
    "@angular//packages/core",
    "@rxjs",
    "@rxjs//operators",
    "//third_party/ts/material2/src/cdk/a11y",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/overlay",
    "//third_party/ts/material2/src/cdk/portal",
    "//third_party/ts/material2/src/lib/core",
  ],
)

# TODO(jelbourn): replace this w/ sass_library when it supports acting like a filegroup
filegroup(
  name = "dialog_scss_partials",
  srcs = glob(["**/_*.scss"]),
)

sass_binary(
  name = "dialog_scss",
  src = "dialog.scss",
  deps = ["//third_party/ts/material2/src/lib/core:core_scss_lib"],
)

sass_library(
  name = "theme",
  srcs = glob(["**/*-theme.scss"]),
)

ng_test_library(
  name = "dialog_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/common",
    "@angular//packages/common/testing",
    "@angular//packages/platform-browser",
    "@angular//packages/platform-browser/animations",
    "@rxjs",
    "//third_party/ts/material2/src/cdk/bidi",
    "//third_party/ts/material2/src/cdk/keycodes",
    "//third_party/ts/material2/src/cdk/overlay",
    "//third_party/ts/material2/src/cdk/scrolling",
    "//third_party/ts/material2/src/cdk/testing",
    ":dialog",
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":dialog_test_sources"],
)
